@@ -14,6 +14,7 @@ HEADERS = \
 	synthv1_lv2.h \
 	synthv1_wave.h \
 	synthv1_ramp.h \
+	synthv1_list.h \
 	synthv1_fx.h \
 	synthv1widget.h \
 	synthv1widget_env.h \
